# ovse

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  database.py  keys.py  main.py  mock_uidai.py  models.py  ovse.py  schemas.py  sd_jwt.py
tests/: test_ovse_flow.py
